<resources>
    <string name="app_name">ESB Manager</string>
    <string name="version_name">0.1</string>
    <string name="action_settings">Einstellungen</string>
    <string name="class_preference_title">Klassenauswahl</string>
    <string name="sync_preference_title">Synchronisieren</string>
    <string name="login">Bestätigen</string>
    <string name="username">Benutzername</string>
    <string name="password">Passwort</string>
    <string name="login_failed">Bitte füllen Sie die Felder aus</string>
    <string name="action_login">Anmelden</string>
    <string name="anmelden">Anmelden</string>
    <string name="title_activity_navigation">activity_navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="searchViewHint">Klassen durchsuchen</string>
    <string name="cancelled">Entfall</string>
    <string name="cancellation">Entfall</string>
    <string name="search">Suche</string>
    <string name="pref_previously_started">previously_started</string>
    <string name="initialSetup">Ersteinrichtung</string>
    <string name="setup_class">Wähle deine Klasse aus</string>
    <string name="title_activity_login">Anmeldung</string>

    <!-- Strings related to login -->
    <string name="prompt_user">Benutzername</string>
    <string name="prompt_password">Passwort</string>
    <string name="action_sign_in">Login</string>
    <string name="error_invalid_user">Der Benutzername ist ungültig</string>
    <string name="error_invalid_password">Das Passwort ist zu kurz</string>
    <string name="error_incorrect_password">Das Passwort ist falsch</string>
    <string name="error_field_required">Dieses Feld muss ausgefüllt werden</string>
    <string name="title_activity_test">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="error_no_Internet">Keine Internetverbindung</string>
    <string name="hw_subject">Fach</string>
    <string name="hw_task">Aufgabe</string>
    <string name="hw_until">Bis</string>
    <string name="hw_info">Zusatzinformationen</string>
    <string name="hw_urgent">Wichtig</string>
    <string name="add_homework">Hausaufgabe hinzufügen</string>
    <string name="pref_substitution">Vertretungsplan</string>
    <string name="color_picker_substitution">Farbauswahl</string>
    <string name="colorListActivity">Farbauswahl</string>
    <string name="substitution">Entfall</string>
    <string name="teacherChange">Vertretung</string>
    <string name="roomChange">Raumwechsel</string>
    <string name="event">Veranstaltung</string>
    <string name="co_supervision">Mitbetreuung</string>
    <string name="message_of_the_day">Nachricht des Tages</string>
    <string name="choose_color">Wähle eine Farbe</string>
    <string name="reset_colors">Farben zurücksetzen</string>
    <string name="sure_color_reset">Möchten Sie alle Farben zurücksetzen?</string>
    <string name="dialog_edit">Bearbeiten</string>
    <string name="dialog_delete">Löschen</string>
    <string name="important">Wichtig</string>
    <string name="please_enter_something">Dieses Feld muss ausgefüllt werden</string>
    <string name="homework_save">Speichern</string>
    <string name="delete_homework">Hausaufgabe löschen?</string>
    <string name="delete_exam">Prüfung löschen?</string>
    <string name="add_exam">Prüfung hinzufügen</string>
    <string name="ex_date">Datum</string>
    <string name="ex_note">Notiz</string>
    <string name="no_exams">Keine Prüfungen</string>
    <string name="no_homework">Keine Hausaufgaben</string>
    <string name="ex_type">Prüfungsart</string>

    <string-array name="exam_spinner_type">
        <item>Klausur</item>
        <item>Test</item>
        <item>Referat</item>
        <item>Hausarbeit</item>
    </string-array>

    <string-array name="homework_tab_spinner">
        <item>Nicht erledigt</item>
        <item>Erledigt</item>
    </string-array>

    <string-array name="exam_tab_spinner">
        <item>Bevorstehend</item>
        <item>Abgeschlossen</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
