<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_substitution"
        android:key="pref_key_storage_settings_substitution">
        <ListPreference
            android:key="classList"
            android:title="@string/class_preference_title"
            android:entries="@array/listentries"
            android:entryValues="@array/listvalues"
            android:defaultValue="0" />
        <Preference
            android:title="@string/color_picker_substitution">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="com.ronschka.david.esb"
                android:targetClass="com.ronschka.david.esb.ColorListActivity"
                />
        </Preference>
        <CheckBoxPreference
            android:key="syncCheck"
            android:title="@string/sync_preference_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/app_name"
        android:key="pref_key_storage_settings_substitution">

        <Preference
            android:title="Impressum"
            android:summary="David Ronschka">
        </Preference>

        <Preference
            android:title="Kontakt"
            android:summary="manager.esb@gmail.com">
        </Preference>

        <Preference
            android:title="Version"
            android:summary="0.1">
        </Preference>

    </PreferenceCategory>
</PreferenceScreen>