<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView_add"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp">

            <TextView
                android:id="@+id/textView_subject"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/hw_subject"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/spinner_subject"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/textView_until"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/ex_date"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/button_until"
                style="?android:attr/spinnerStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="12dp"
                android:onClick="setUntil"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:textSize="16sp"
                tools:text="Monday, 01/01/2015" />

            <EditText
                android:id="@+id/editText_info"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/hw_info"
                android:inputType="textMultiLine"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/textView_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/ex_note"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editText_homework"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:inputType="textCapSentences|textAutoCorrect" />

            <CheckBox
                android:id="@+id/checkBox_urgent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/hw_urgent" />
        </LinearLayout>
    </ScrollView>

    <include layout="@layout/button_bar" />
</LinearLayout>